{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 81,
  "lineage": "1a8f7f39-23c5-d28a-3b5d-ceebd6d87ed1",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "elite_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/195189f7-38db-48e9-8e79-a72596572df2/resourceGroups/elite_general_connection/providers/Microsoft.Network/networkInterfaces/elite_interface-nic",
            "internal_domain_name_suffix": "4d1e4p5n3gtuzmu2hfxvh3aazf.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/195189f7-38db-48e9-8e79-a72596572df2/resourceGroups/elite_general_connection/providers/Microsoft.Network/publicIPAddresses/elitedev_pip",
                "subnet_id": "/subscriptions/195189f7-38db-48e9-8e79-a72596572df2/resourceGroups/elite_general_connection/providers/Microsoft.Network/virtualNetworks/elitedev_vnet1/subnets/application_subnet1"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-18-4E-5D",
            "name": "elite_interface-nic",
            "private_ip_address": "10.0.3.4",
            "private_ip_addresses": [
              "10.0.3.4"
            ],
            "resource_group_name": "elite_general_connection",
            "virtual_machine_id": "/subscriptions/195189f7-38db-48e9-8e79-a72596572df2/resourceGroups/elite_general_connection/providers/Microsoft.Compute/virtualMachines/vmdev"
          },
          "dependencies": [
            "azurerm_public_ip.elitedev_pip",
            "azurerm_resource_group.elite_general_connection",
            "azurerm_subnet.application_subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "elite_devnsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/195189f7-38db-48e9-8e79-a72596572df2/resourceGroups/elite_general_connection/providers/Microsoft.Network/networkSecurityGroups/elite_devnsg1",
            "location": "eastus",
            "name": "elite_devnsg1",
            "resource_group_name": "elite_general_connection",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "184.92.221.250/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.elite_general_connection"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/195189f7-38db-48e9-8e79-a72596572df2/resourceGroups/elite_general_connection/providers/Microsoft.Network/networkSecurityGroups/elite_devnsg1/securityRules/ssh",
            "name": "ssh",
            "network_security_group_name": "elite_devnsg1",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "elite_general_connection",
            "source_address_prefix": "184.92.221.250/32",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.elite_devnsg1",
            "azurerm_resource_group.elite_general_connection"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "elitedev_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/195189f7-38db-48e9-8e79-a72596572df2/resourceGroups/elite_general_connection/providers/Microsoft.Network/publicIPAddresses/elitedev_pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.228.224.171",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "elitedev_pip",
            "resource_group_name": "elite_general_connection",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Production"
            }
          },
          "dependencies": [
            "azurerm_resource_group.elite_general_connection"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "elitedev_route2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/195189f7-38db-48e9-8e79-a72596572df2/resourceGroups/elite_general_connection/providers/Microsoft.Network/routeTables/elitedev_route2",
            "location": "eastus",
            "name": "elitedev_route2",
            "resource_group_name": "elite_general_connection",
            "route": [
              {
                "address_prefix": "10.0.0.0/16",
                "name": "elitedev-route",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              }
            ],
            "subnets": [
              "/subscriptions/195189f7-38db-48e9-8e79-a72596572df2/resourceGroups/elite_general_connection/providers/Microsoft.Network/virtualNetworks/elitedev_vnet1/subnets/application_subnet1"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.elite_general_connection"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "application_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/195189f7-38db-48e9-8e79-a72596572df2/resourceGroups/elite_general_connection/providers/Microsoft.Network/virtualNetworks/elitedev_vnet1/subnets/application_subnet1",
            "name": "application_subnet1",
            "resource_group_name": "elite_general_connection",
            "virtual_network_name": "elitedev_vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.elite_general_connection",
            "azurerm_virtual_network.elitedev_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "elite_devnsg_assoc_application_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/195189f7-38db-48e9-8e79-a72596572df2/resourceGroups/elite_general_connection/providers/Microsoft.Network/virtualNetworks/elitedev_vnet1/subnets/application_subnet1",
            "network_security_group_id": "/subscriptions/195189f7-38db-48e9-8e79-a72596572df2/resourceGroups/elite_general_connection/providers/Microsoft.Network/networkSecurityGroups/elite_devnsg1",
            "subnet_id": "/subscriptions/195189f7-38db-48e9-8e79-a72596572df2/resourceGroups/elite_general_connection/providers/Microsoft.Network/virtualNetworks/elitedev_vnet1/subnets/application_subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.elite_devnsg1",
            "azurerm_resource_group.elite_general_connection",
            "azurerm_subnet.application_subnet1",
            "azurerm_virtual_network.elitedev_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "elitedev_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/195189f7-38db-48e9-8e79-a72596572df2/resourceGroups/elite_general_connection/providers/Microsoft.Network/virtualNetworks/elitedev_vnet1/subnets/application_subnet1",
            "route_table_id": "/subscriptions/195189f7-38db-48e9-8e79-a72596572df2/resourceGroups/elite_general_connection/providers/Microsoft.Network/routeTables/elitedev_route2",
            "subnet_id": "/subscriptions/195189f7-38db-48e9-8e79-a72596572df2/resourceGroups/elite_general_connection/providers/Microsoft.Network/virtualNetworks/elitedev_vnet1/subnets/application_subnet1"
          },
          "dependencies": [
            "azurerm_resource_group.elite_general_connection",
            "azurerm_route_table.elitedev_route2",
            "azurerm_subnet.application_subnet1",
            "azurerm_virtual_network.elitedev_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "elitedev_vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "dns_servers": [
              "10.0.0.4",
              "10.0.0.5"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3f4ff6f0-e9ed-4ca7-b29c-396f53f400cd",
            "id": "/subscriptions/195189f7-38db-48e9-8e79-a72596572df2/resourceGroups/elite_general_connection/providers/Microsoft.Network/virtualNetworks/elitedev_vnet1",
            "location": "eastus",
            "name": "elitedev_vnet1",
            "resource_group_name": "elite_general_connection",
            "subnet": [
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/195189f7-38db-48e9-8e79-a72596572df2/resourceGroups/elite_general_connection/providers/Microsoft.Network/virtualNetworks/elitedev_vnet1/subnets/application_subnet1",
                "name": "application_subnet1",
                "security_group": "/subscriptions/195189f7-38db-48e9-8e79-a72596572df2/resourceGroups/elite_general_connection/providers/Microsoft.Network/networkSecurityGroups/elite_devnsg1"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.elite_general_connection"
          ]
        }
      ]
    }
  ]
}